--- a/index.html
+++ b/index.html
@@ -9,44 +9,59 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-    }
-    .sidebar {
-      height: 100vh;
-      background-color: #343a40;
-      padding-top: 20px;
-    }
-    .sidebar a {
-      color: #adb5bd;
-      text-decoration: none;
-      display: block;
-      padding: 10px 20px;
-      transition: 0.3s;
-    }
-    .sidebar a:hover {
-      background-color: #495057;
-      color: #fff;
-    }
-    .sidebar .active {
-      background-color: #495057;
-      color: #fff;
-    }
-    .main-content {
-      padding: 20px;
-    }
-    .card i {
-      font-size: 2rem;
-      color: #f3f4f5;
-    }
+   body {
+  font-family: Arial, sans-serif;
+  background-color: #f8f9fa;
+  margin: 0;
+  overflow: hidden; /* prevent double scroll */
+}
 
-    .card{
-       color: #fff;
-    }
-    .card p {
-         color: #fff;
-    }
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 220px; /* fixed width */
+  height: 100vh;
+  background-color: #343a40;
+  padding-top: 20px;
+  overflow-y: auto; /* in case sidebar itself grows */
+}
+
+.sidebar a {
+  color: #adb5bd;
+  text-decoration: none;
+  display: block;
+  padding: 10px 20px;
+  transition: 0.3s;
+}
+.sidebar a:hover {
+  background-color: #495057;
+  color: #fff;
+}
+.sidebar .active {
+  background-color: #495057;
+  color: #fff;
+}
+
+.main-content {
+  margin-left: 220px; /* push content beside sidebar */
+  height: 100vh;
+  overflow-y: auto; /* only this scrolls */
+  padding: 20px;
+}
+
+.card i {
+  font-size: 2rem;
+  color: #f3f4f5;
+}
+
+.card {
+  color: #fff;
+}
+.card p {
+  color: #fff;
+}
+
   </style>
 </head>
 <body>
@@ -55,11 +70,11 @@
       <!-- Sidebar -->
       <nav class="col-md-2 d-md-block sidebar">
         <h4 class="text-white text-center">Admin</h4>
-        <a href="#" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a>
-        <a href="#"><i class="bi bi-people"></i> Users</a>
-        <a href="#"><i class="bi bi-box"></i> Products</a>
-        <a href="#"><i class="bi bi-bar-chart"></i> Reports</a>
-        <a href="#"><i class="bi bi-gear"></i> Settings</a>
+        <a href="index.html" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a>
+        <a href="users.html"><i class="bi bi-people"></i> Users</a>
+        <a href="products.html"><i class="bi bi-box"></i> Products</a>
+        <a href="reports.html"><i class="bi bi-bar-chart"></i> Reports</a>
+        <a href="settings.html"><i class="bi bi-gear"></i> Settings</a>
       </nav>
 
       <!-- Main Content -->
